<resources>
    <string name="app_name">NLWeer</string>
    <string name="nav_header_title">NLWeer</string>
    <string name="nav_header_subtitle">Free, open source, and privacy-friendly Dutch weather app</string>
    <string name="nav_header_desc">Navigation header icon</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share map</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_about">NLWeer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_empty">Empty screen</string>

    <string name="menu_knmi_header">Source: KNMI</string>
    <string name="menu_knmi_rain_m1">Rain last hour (+temp)</string>
    <string name="menu_knmi_today">Forecast today</string>
    <string name="menu_knmi_tonight">Forecast tonight</string>
    <string name="menu_knmi_tomorrow">Forecast tomorrow</string>
    <string name="menu_knmi_temperature">Temperature</string>
    <string name="menu_knmi_wind">Wind</string>
    <string name="menu_knmi_visibility">Visibility</string>
    <string name="menu_knmi_humidity">Relative humidity</string>
    <string name="menu_knmi_warnings">Weather warnings</string>
    <string name="menu_knmi_sun_today">Sun strength today</string>
    <string name="menu_knmi_sun_tomorrow">Sun strength tomorrow</string>
    <string name="menu_knmi_daily_max_temperature">Yesterday\'s max temperature</string>
    <string name="menu_knmi_daily_min_temperature">Yesterday\'s min temperature</string>
    <string name="menu_knmi_daily_max_wind_gust">Yesterday\'s max wind gust</string>
    <string name="menu_knmi_daily_max_wind_speed">Yesterday\'s max wind speed</string>
    <string name="menu_knmi_daily_rain">Daily precipitation</string>
    <string name="menu_knmi_daily_snow">Snow cover</string>
    <string name="menu_knmi_daily_sun">Yesterday\'s sunshine</string>
    <string name="menu_knmi_europe_synoptic_now">Synoptic map now</string>
    <string name="menu_knmi_europe_synoptic_next_12h">Synoptic map next 12h</string>
    <string name="menu_knmi_europe_synoptic_next_24h">Synoptic map next 24h</string>
    <string name="menu_knmi_satellite">Satellite</string>
    <string name="menu_knmi_chill_temperature">Windchill</string>
    <string name="menu_knmi_rain_m1_no_temp">Rain last hour</string>

    <string name="menu_knmi_text">Weather report</string>
    <string name="menu_knmi_text_source">Source:\nhttps://www.knmi.nl/nederland-nu/weer/verwachtingen</string>
    <string name="menu_knmi_sixdayforecast">7-Day forecast</string>
    <string name="menu_knmi_text_loading">Data is being loaded&#8230;</string>
    <string name="menu_knmi_text_failed">Data could not be loaded</string>
    <string name="menu_knmi_pluim">Pluim</string>

    <string name="menu_buienradar_header">Source: Buienradar</string>
    <string name="menu_buienradar_rain_m1">Rain last hour</string>
    <string name="menu_buienradar_sun">Sunshine map</string>
    <string name="menu_buienradar_cloud">Cloud cover map</string>
    <string name="menu_buienradar_drizzle">Drizzle last hour</string>
    <string name="menu_buienradar_hail">Hail last hour</string>
    <string name="menu_buienradar_chart">Rain prediction chart</string>
    <string name="menu_buienradar_chart_unit">mm/h</string>
    <string name="menu_buienradar_chart_loading">Data is being loaded&#8230;</string>
    <string name="menu_buienradar_chart_empty">No precipitation expected at</string>
    <string name="menu_buienradar_chart_no_location">Error: Location not known, verify the settings</string>
    <string name="menu_buienradar_chart_outside_of_range">Error: Location outside of the Netherlands</string>
    <string name="menu_buienradar_chart_error">Data could not be loaded, try again later</string>
    <string name="menu_buienradar_pluim">Pluim</string>

    <string name="settings_category_sources">Data sources</string>
    <string name="settings_knmi_enable">KNMI</string>
    <string name="settings_knmi_enable_sub">Show data from KNMI</string>
    <string name="settings_buienradar_enable">Buienradar</string>
    <string name="settings_buienradar_enable_sub">Show data from Buienradar</string>
    <string name="settings_buienradar_enable_title">Permissions required for mobile usage</string>
    <string name="settings_buienradar_enable_message">Buienradar data may only be shown if this is a non-mobile device or if you have explicit permissions. For more information see: \nhttps://www.buienradar.nl/overbuienradar/gratis-weerdata</string>
    <string name="settings_buienradar_enable_accept">Continue</string>
    <string name="settings_buienradar_enable_decline">Cancel</string>
    <string name="settings_default_view">First screen</string>
    <string name="settings_default_view_sub">Select the screen shown at the start</string>
    <string name="settings_nav_view_knmi">KNMI views</string>
    <string name="settings_nav_view_knmi_sub">Select the views to show in the app</string>
    <string name="settings_nav_view_buienradar">Buienradar views</string>
    <string name="settings_nav_view_buienradar_sub">Select the views to show in the app</string>

    <string name="settings_category_location">Location settings</string>
    <string name="settings_location_enable">Show my location</string>
    <string name="settings_location_enable_sub">Shows a marker at my location</string>
    <string name="settings_location_auto_enable">Use GPS/network location</string>
    <string name="settings_location_auto_enable_sub">Automatically determine location</string>
    <string name="settings_location_provider">Choose location provider</string>
    <string name="settings_latitude">My location: latitude</string>
    <string name="settings_longitude">My location: longitude</string>
    <string name="settings_network">Network</string>
    <string name="settings_gps">GPS</string>

    <string name="settings_category_appearance">Appearance options</string>
    <string name="settings_floating_navigation_enable">Show floating navigation buttons</string>
    <string name="settings_floating_navigation_sub">Enables one-tap next/previous navigation</string>
    <string name="settings_background_colour">Background colour</string>
    <string name="settings_location_shape">Location marker shape</string>
    <string name="settings_location_colour">Location marker colour</string>

    <string name="settings_dark_mode">App dark mode</string>
    <string name="dark_mode_no">Disabled</string>
    <string name="dark_mode_yes">Enabled</string>
    <string name="dark_mode_system">System default</string>

    <string name="settings_languages">Display language</string>
    <string name="language_system">System default</string>

    <string name="option_two_circles">Large and small circle</string>
    <string name="option_one_circle">Single large circle</string>

    <string name="share_subject">NLWeer weather map</string>
    <string name="share_choose">Share this map through</string>
    <string name="share_disabled_alert_title">Unsupported</string>
    <string name="share_disabled_alert_message">Can\'t share this page, only maps are supported</string>

    <string name="about_text_header_1">About NLWeer</string>
    <string name="about_text_content_1">NLWeer is an open-source and privacy-friendly Dutch weather app. It is free both as in free lunch and as in freedom. The code is MIT licensed. Weather information is provided by KNMI and Buienradar, see below. For code, reporting issues, new versions, and more information see:\n\nhttps://github.com/CNugteren/NLWeer</string>
    <string name="about_text_header_2">KNMI data</string>
    <string name="about_text_content_2">All KNMI data has the Creative Commons Zero (CC0) license, with the note that KNMI itself is not involved with the NLWeer app and does not actively support the usage of this data in NLWeer. For more information see https://www.knmi.nl/copyright</string>
    <string name="about_text_header_3">Buienradar data</string>
    <string name="about_text_content_3">Buienradar data is freely available, however, usage is only allowed for non-commercial purposes. Using it for mobile applications or commercial purposes requires permission of Buienradar, a brand of RTL Nederland. For more information see: https://www.buienradar.nl/overbuienradar/gratis-weerdata</string>
    <string name="about_text_header_4">App and menu icons</string>
    <string name="about_text_content_4">Main app icon: Copyright by Mozilla, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=59726384\n
\nMoon icon: Copyright OOjs UI Team, MIT License, https://phabricator.wikimedia.org/diffusion/GOJU/browse/master/LICENSE-MIT\n
\nSun, wind, rain, snow, wind speed, hail, cloud, drizzle, graph, humidity, fog, warning, arrow, satellite, 6-day forecast, and report icons: Copyright by Icon Fonts, CC BY 3.0, http://www.onlinewebfonts.com/icon\n
\nTemperature, isobar, and sunrise icons: Icons made by Hirschwolf and Freepik from www.flaticon.com</string>
    <string name="about_text_header_5">NLWeer version info</string>

    <string name="colour_black">Black</string>
    <string name="colour_white">White</string>
    <string name="colour_red">Red</string>
    <string name="colour_orange">Orange</string>
    <string name="colour_yellow">Yellow</string>
    <string name="colour_purple">Purple</string>
    <string name="colour_green">Green</string>
</resources>
