<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/knmi_menu" android:title="@string/menu_knmi_header">
        <menu>
            <item
                android:id="@+id/nav_knmi_rain_m1"
                android:icon="@drawable/menu_radar"
                android:title="@string/menu_knmi_rain_m1" />
            <item
                android:id="@+id/nav_knmi_today"
                android:icon="@drawable/menu_today"
                android:title="@string/menu_knmi_today" />
            <item
                android:id="@+id/nav_knmi_tonight"
                android:icon="@drawable/menu_moon"
                android:title="@string/menu_knmi_tonight" />
            <item
                android:id="@+id/nav_knmi_tomorrow"
                android:icon="@drawable/menu_tomorrow"
                android:title="@string/menu_knmi_tomorrow" />
            <item
                android:id="@+id/nav_knmi_temperature"
                android:icon="@drawable/menu_temperature"
                android:title="@string/menu_knmi_temperature" />
            <item
                android:id="@+id/nav_knmi_wind"
                android:icon="@drawable/menu_wind"
                android:title="@string/menu_knmi_wind" />
            <item
                android:id="@+id/nav_knmi_sun_tod"
                android:icon="@drawable/menu_today"
                android:title="@string/menu_knmi_sun_today" />
            <item
                android:id="@+id/nav_knmi_sun_tom"
                android:icon="@drawable/menu_tomorrow"
                android:title="@string/menu_knmi_sun_tomorrow" />
            <item
                android:id="@+id/nav_knmi_text"
                android:icon="@drawable/menu_weather_report"
                android:title="@string/menu_knmi_text" />
        </menu>
    </item>

    <item android:id="@+id/buienradar_menu" android:title="@string/menu_buienradar_header">
        <menu>
            <item
                android:id="@+id/nav_buienradar_rain_m1"
                android:icon="@drawable/menu_radar"
                android:title="@string/menu_buienradar_rain_m1" />
            <item
                android:id="@+id/nav_buienradar_sun"
                android:icon="@drawable/menu_today"
                android:title="@string/menu_buienradar_sun" />
            <item
                android:id="@+id/nav_buienradar_cloud"
                android:icon="@drawable/menu_cloud"
                android:title="@string/menu_buienradar_cloud" />
            <item
                android:id="@+id/nav_buienradar_drizzle"
                android:icon="@drawable/menu_drizzle"
                android:title="@string/menu_buienradar_drizzle" />
            <item
                android:id="@+id/nav_buienradar_hail"
                android:icon="@drawable/menu_hail"
                android:title="@string/menu_buienradar_hail" />
            <item
                android:id="@+id/nav_buienradar_chart"
                android:icon="@drawable/menu_bargraph"
                android:title="@string/menu_buienradar_chart" />
        </menu>

    </item>

</menu>
